<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="appName">SilentMoon</string>
    <string name="silentAppName">Silent</string>
    <string name="moonAppName">Moon</string>
    <string name="appDescriptionTitle">We are what we do</string>
    <string name="appDescriptionText">Thousands of people are using silent moon for small meditations </string>
    <string name="signUp">Sign up</string>
    <string name="alreadyHaveAnAccount">Already have an account? Log in</string>
    <string name="logInText">Log in</string>
    <string name="welcomeBack">Welcome Back!</string>
    <string name="continueWithFacebook">Continue with Facebook</string>
    <string name="continueWithGoogle">Continue with Google⠀⠀⠀</string>
    <string name="orLogInWithEmail">Or log in with email</string>
    <string name="emailAddressHint">Email address</string>
    <string name="passwordHint">Password</string>
    <string name="nameHint">Name</string>
    <string name="noAccount">No account? Sign up</string>
    <string name="forgotPassword">Forgot Password?</string>
    <string name="createYourAccount">Create your account</string>
    <string name="orSignUpWithEmail">Or sign up with email</string>
    <string name="iHaveReadThePrivacyPolicy">I have read the privacy policy</string>
    <string name="privacyPolicy">privacy policy</string>
    <string name="privacyPolicyText">Тут будет политика конфиденциальности</string>
    <string name="getStarted">Get started</string>
    <string name="welcomeGreetingsText">Hi %1$s, Welcome\n to Silent Moon</string>
    <string name="welcomeGreetingsTextShort">Hi %1$s, Welcome\n</string>
    <string name="welcomeGreetingsPlaceholderText">Hi Afsar, Welcome to Silent Moon</string>
    <string name="welcomeText">Explore the app, Find some peace of mind to prepare for meditation.</string>
    <string name="chooseTopicTitle">What Brings you \nto Silent Moon?</string>
    <string name="chooseTopicTitleBoldPart">What Brings you</string>
    <string name="chooseTopicText">choose a topic to focus on:</string>

    <string name="topicReduceStress">Reduce Stress</string>
    <string name="topicImprovePerformance">Improve Performance</string>
    <string name="topicIncreaseHappiness">Increase Happiness</string>
    <string name="topicReduceAnxiety">Reduce Anxiety</string>
    <string name="topicPersonalGrowth">Personal Growth</string>
    <string name="topicBetterSleep">Better Sleep</string>
    <string name="topicManageTime">Manage Time</string>
    <string name="topicIncreaseProductivity">Increase Productivity</string>

    <string name="meditationRecommendationFocus">Focus</string>
    <string name="meditationRecommendationHappiness">Happiness</string>
    <string name="meditationRecommendationDescription" tools:ignore="TypographyDashes">MEDITATION • 3-10 MIN</string>

    <string name="homeTitle">Good Morning, %1$s</string>
    <string name="homeTitlePlaceholder">Good Morning, Afsar</string>
    <string name="homeSubtitle">We Wish you have a good day</string>
    <string name="meditationDuration" tools:ignore="TypographyDashes">3-10 min</string>
    <string name="start">Start</string>
    <string name="basics">Basics</string>
    <string name="course">course</string>
    <string name="relaxation">Relaxation</string>
    <string name="music">music</string>
    <string name="dailyThought">Daily Thought</string>
    <string name="meditation">Meditation</string>
    <string name="playMeditation">Play meditation</string>
    <string name="recommendedForYou">Recommended for you</string>

    <string name="defaultUsername">Afsar</string>

    <string name="sharedPrefsUserKey">user_prefs_key</string>
    <string name="usernamePrefsKey">username_key</string>

    <string name="bottomNavigationHome">Home</string>
    <string name="bottomNavigationSleep">Sleep</string>
    <string name="bottomNavigationMeditate">Meditate</string>
    <string name="bottomNavigationMusic">Music</string>
    <string name="bottomNavigationProfile">Afsar</string>

    <string name="happyMorningTitle">Happy Morning</string>
    <string name="happyMorningDescription">Ease the mind into a restful night’s sleep with\nthese deep, ambient tones.</string>
    <string name="favouritesPlaceholder">24.234 Favourites</string>
    <string name="listeningPlaceholder">34.234 Listening</string>
    <string name="pickNarrator">Pick a Narrator</string>
    <string name="maleVoice">Male voice</string>
    <string name="femaleVoice">Female voice</string>
    <string name="focusAttention">Focus Attention</string>
    <string name="bodyScan">Body Scan</string>
    <string name="makingHappiness">Making Happiness</string>

    <string name="duration_10_minutes">10 min</string>
    <string name="duration_5_minutes">5 min</string>
    <string name="duration_3_minutes">3 min</string>

    <string name="player_duration_0_seconds">00:00</string>
    <string name="player_music_duration">45:00</string>

    <string name="playAudio">Play audio</string>
    <string name="likeCourse">Like course</string>
    <string name="downloadCourse">Download course</string>
    <string name="goBack">Go back</string>
    <string name="courseSaveToFavourites">The course was saved to favorites!</string>
    <string name="courseDownload">The course was downloaded!</string>

    <string name="meditateTitle">Meditate</string>
    <string name="meditateDescription">we can learn how to recognize when our minds are doing their normal everyday acrobatics.</string>

    <string name="categoryAll">All</string>
    <string name="categoryMy">My</string>
    <string name="categoryAnxious">Anxious</string>
    <string name="categorySleep">Sleep</string>
    <string name="categoryKids">Kids</string>

    <string name="dailyCalmTitle">Daily Calm</string>
    <string name="dailyCalmDescription">APR 30 • Pause practice</string>
    <string name="sevenDaysOfCalm">7 Days of Calm</string>
    <string name="anxietyRelease">Anxiety Release</string>
    <string name="howToMeditate">How to Meditate</string>

    <string name="rewind_15_seconds">Rewind 15 seconds</string>
    <string name="fast_forward_15_seconds">Fast forward 15 seconds</string>

    <string name="remindersTimeQuestion">What time would you\nlike to meditate?</string>
    <string name="remindersTimeDescription">Any time you can choose but We recommend first thing in the morning.</string>
    <string name="remindersDateQuestion">Which day would you\nlike to meditate?</string>
    <string name="remindersDateDescription">Everyday is best, but we recommend picking at least five.</string>

    <string name="weekdaySundayShort">SU</string>
    <string name="weekdayMondayShort">M</string>
    <string name="weekdayTuesdayShort">T</string>
    <string name="weekdayWednesdayShort">W</string>
    <string name="weekdayThursdayShort">TH</string>
    <string name="weekdayFridayShort">F</string>
    <string name="weekdaySaturdayShort">S</string>

    <string name="save">Save</string>
    <string name="noThanks">No thanks</string>
    <string name="related">Related</string>
    <string name="play">Play</string>

    <string name="welcomeSleepTitle">Welcome to Sleep</string>
    <string name="welcomeSleepDescription">Explore the new king of sleep. It uses sound and visualization to create perfect conditions for refreshing sleep.</string>

    <string name="sleepTitle">Sleep Stories</string>
    <string name="sleepDescription">Soothing bedtime stories to help you fall into a deep and natural sleep</string>
    <string name="theOceanMoonTitle">The Ocean Moon</string>
    <string name="theOceanMoonDescription">Non-stop 8-hour mixes of our most popular sleep audio</string>
    <string name="sleepMusicDuration">45 MIN • SLEEP MUSIC</string>

    <string name="storyNightIsland">Night Island</string>
    <string name="storySweetSleep">Sweet Sleep</string>
    <string name="storyGoodNight">Good Night</string>
    <string name="storyMoonClouds">Moon Clouds</string>

    <string name="sleepMusicDescription">Ease the mind into a restful night’s sleep with\nthese deep, ambient tones.</string>
    <string name="sleepMusic">Sleep Music</string>
</resources>