<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/bottom_navigation_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/ic_home"
        android:title="@string/bottomNavigationHome" />
    <item
        android:id="@+id/bottom_navigation_sleep"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/ic_moon"
        android:title="@string/bottomNavigationSleep" />
    <item
        android:id="@+id/bottom_navigation_meditate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/ic_meditate"
        android:title="@string/bottomNavigationMeditate" />
    <item
        android:id="@+id/bottom_navigation_music"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/ic_music"
        android:title="@string/bottomNavigationMusic" />
    <item
        android:id="@+id/bottom_navigation_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/ic_profile"
        android:title="@string/bottomNavigationProfile" />
</menu>