<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/musicBgColor"
    tools:context=".music.MusicFragment">

    <ImageView
        android:id="@+id/musicBg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@null"
        android:scaleType="fitXY"
        android:src="@drawable/img_music_bg_shape"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/closeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/padding_20"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/goBack"
        android:src="@drawable/ic_close_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/downloadButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:contentDescription="@string/downloadCourse"
        android:src="@drawable/ic_download_light"
        app:layout_constraintBottom_toBottomOf="@+id/likeButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/likeButton" />

    <ImageView
        android:id="@+id/likeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:contentDescription="@string/likeCourse"
        android:src="@drawable/ic_like_light"
        app:layout_constraintBottom_toBottomOf="@+id/closeButton"
        app:layout_constraintEnd_toStartOf="@+id/downloadButton"
        app:layout_constraintTop_toTopOf="@+id/closeButton" />

    <TextView
        android:id="@+id/musicName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="100dp"
        android:text="@string/focusAttention"
        android:textAlignment="center"
        android:textAppearance="@style/musicName"
        android:textColor="@color/darkGray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/musicBg"
        app:layout_constraintStart_toStartOf="@+id/musicBg"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/musicDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_small"
        android:text="@string/sevenDaysOfCalm"
        android:textAlignment="center"
        android:textAppearance="@style/musicDescription"
        android:textColor="@color/musicDescriptionColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/musicName" />

    <ToggleButton
        android:id="@+id/playButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:background="@drawable/ic_stop_button_player"
        android:textOff=""
        android:textOn=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/musicDescription" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="50dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/rewind_15_seconds"
        android:src="@drawable/ic_15_sec_back"
        app:layout_constraintBottom_toBottomOf="@+id/playButton"
        app:layout_constraintEnd_toStartOf="@+id/playButton"
        app:layout_constraintTop_toTopOf="@+id/playButton" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/fast_forward_15_seconds"
        android:src="@drawable/ic_15_sec_forward"
        app:layout_constraintBottom_toBottomOf="@+id/playButton"
        app:layout_constraintStart_toEndOf="@+id/playButton"
        app:layout_constraintTop_toTopOf="@+id/playButton" />

    <com.google.android.material.slider.Slider
        android:id="@+id/musicSlider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="@+id/musicDuration"
        app:layout_constraintStart_toStartOf="@+id/currentTime"
        app:layout_constraintTop_toBottomOf="@+id/playButton"
        app:thumbColor="@color/darkGray"
        app:thumbRadius="7dp"
        app:trackColorActive="@color/darkGray"
        app:trackColorInactive="@color/musicDescriptionColor"
        app:trackHeight="2dp" />

    <TextView
        android:id="@+id/currentTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/padding_20"
        android:text="@string/player_duration_0_seconds"
        android:textAppearance="@style/musicTime"
        android:textColor="@color/darkGray"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/musicSlider" />

    <TextView
        android:id="@+id/musicDuration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/padding_20"
        android:text="@string/player_music_duration"
        android:textAppearance="@style/musicTime"
        android:textColor="@color/darkGray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/musicSlider" />

</androidx.constraintlayout.widget.ConstraintLayout>