<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/basicsCourseCardLayout"
    android:layout_width="0dp"
    android:layout_height="210dp"
    android:layout_marginStart="@dimen/padding_20"
    android:layout_marginTop="30dp"
    android:background="@drawable/meditation_card_shape"
    android:backgroundTint="@color/accent"
    app:layout_constraintEnd_toStartOf="@+id/relaxationMusicCardLayout"
    app:layout_constraintHorizontal_bias="0.5"
    app:layout_constraintHorizontal_weight="1"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/homeSubtitle">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:text="@string/meditationDuration"
        android:textAppearance="@style/meditationCardRegularText"
        app:layout_constraintBottom_toBottomOf="@+id/basicsCourseStartButton"
        app:layout_constraintEnd_toStartOf="@+id/basicsCourseStartButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/basicsCourseStartButton" />

    <Button
        android:id="@+id/basicsCourseStartButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="15dp"
        android:backgroundTint="@color/googleGray"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:minWidth="70dp"
        android:minHeight="35dp"
        android:text="@string/start"
        android:textAppearance="@style/meditationCardTextOnButton"
        android:textColor="@color/darkGray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/courseText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="36dp"
        android:text="@string/course"
        android:textAppearance="@style/meditationCardSubtitle"
        android:textColor="@color/milkWhite"
        app:layout_constraintBottom_toTopOf="@+id/basicsCourseStartButton"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/basics"
        android:textAppearance="@style/meditationCardTitle"
        android:textColor="@color/creamWhite"
        app:layout_constraintBottom_toTopOf="@+id/courseText"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@null"
        android:src="@drawable/img_basics_course"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>